--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,21 @@
-transformars
-transformars[sentencepiece]
+transformers
+transformers[sentencepiece]
 datasets
-sacreblue
-rouge_score
+sacrebleu 
+rouge_score 
 py7zr
 pandas
-numpy
 nltk
 tqdm
-pyYAML
+PyYAML
 matplotlib
 torch
 notebook
 boto3
 mypy-boto3-s3
-python-box==6.0.2
-ensure==1.0.2
-fastapi==0.78.0
-uvicorn==0.18.3
-jinja2==3.1.2
-
-
+python-box
+ensure
+fastapi
+uvicorn
+Jinja2
+-e .
