--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,7 +18,22 @@ data_validation:
 data_transformation:
   root_dir: artifacts/data_transformation
   data_path: artifacts/data_ingestion/samsum_dataset
-  
   tokenizer_name: facebook/bart-large-cnn
 
+
+model_trainer:
+  root_dir: artifacts/data_trainer
+  data_path: artifacts/data_transformation/samsum_dataset
+  model_ckpt: facebook/bart-large-cnn
+
+
+
+model_evaluation:
+  root_dir: artifacts/model_evaluation
+  data_path: artifacts/data_transformation/samsum_dataset
+  model_path: artifacts/model_trainer/bart-large-cnn-model
+  tokenizer_path: artifacts/model_trainer/bart-large-cnn-tokenizer
+  metric_file_name: artifacts/model_evaluation/metrics.csv
+
+  
 
